# junk-drawer

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-8-report.md
crates/jd-app/: Cargo.toml  kittest.toml
crates/jd-app/src/: app.rs  editor.rs  lib.rs  main.rs  menus.rs  palette.rs  rail.rs  state.rs  text_undo.rs  theme.rs
crates/jd-app/tests/: card_faces.rs  desk_kittest.rs  drawer_kittest.rs  editor_kittest.rs  harness_smoke.rs  map_kittest.rs  palette_kittest.rs  spike_focus.rs  spike_heading_marker.rs  spike_layouter.rs  workflow_kittest.rs
crates/jd-core/: Cargo.toml
crates/jd-core/src/: command.rs  doc.rs  error.rs  frontmatter.rs  geom.rs  id.rs  journal.rs  lexer.rs  lib.rs  maplayout.rs  note.rs  rng.rs  session.rs  tag.rs  time.rs  worker.rs
crates/jd-core/src/index/: fuzzy.rs  mod.rs  search.rs
crates/jd-core/src/vault/: io.rs  mod.rs  recovery.rs  scan.rs  trash.rs  watcher.rs
crates/jd-core/tests/: index_integration.rs  inverse_law.rs  lexer_sanity.rs  maplayout_bench.rs  perf.rs  randomized.rs  roundtrip.rs  vault_io.rs  vault_scan.rs  vault_trash.rs  vault_watcher.rs  vault_worker.rs  worker_rollback.rs
crates/jd-core/tests/common/: mod.rs
docs/superpowers/plans/: 2026-07-06-technical-architecture.md  2026-07-06-wp0-workspace-ci.md  2026-07-06-wp1b-lexer.md  (+9 more)
tests-data/golden/: 01-canonical.md  02-obsidian.md  03-no-frontmatter.md  04-crlf.md  05-bom.md  06-unicode.md  07-rtl.md  08-weird-yaml.md  09-duplicate-keys.md  10-frontmatter-only.md  12-unterminated.md  13-foreign-markdown.md  14-code-fences.md
(+12 files in other folders)
